<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="50dp"
    tools:context=".MenuDispositivos"
    android:background="#9EBFE2">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:src="@drawable/dispositivos"/>

    <Button
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:id="@+id/btnAddDispo"
        android:layout_gravity="center"
        android:text="@string/addDispo"
        />

    <Button
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:id="@+id/btnSearchDispo"
        android:layout_gravity="center"
        android:text="@string/searchDispo"
        />

    <Button
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:id="@+id/btnListDispo"
        android:layout_gravity="center"
        android:text="@string/listDispo"
        />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/volver" />

</LinearLayout>