<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#9EBFE2"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MenuInicial"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menuPri"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/habitaciones"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:ignore="TextSizeCheck" />

    <!-- Botón para ir al menú habitaciones -->

    <ImageButton
        android:id="@+id/btnHabitaciones"
        android:layout_width="90dp"
        android:layout_height="92dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/habitacion"
        tools:ignore="SpeakableTextPresentCheck"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:text="@string/dispositivos"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <!-- Botón para ir al menú de dispositivos -->

    <ImageButton
        android:id="@+id/btnDispositivos"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/dispositivos"
        android:baselineAligned="false"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:text="@string/configU"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:ignore="TextSizeCheck" />

    <!-- Botón para ir al menú de configuración de usuario-->
    <ImageButton
        android:id="@+id/btnConfiguracion"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/settings"
        tools:ignore="SpeakableTextPresentCheck" />

</LinearLayout>