<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#9EBFE2"
    android:padding="20dp"
    tools:context=".GestionarDispositivos">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Gestión de Dispositivos"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Nombre"
        />

    <EditText
        android:id="@+id/gestionDispo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="Escriba el nombre del dispositivo"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnGuardarDispo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/btnEditarDispo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:text="@string/editar" />

        <Button
            android:id="@+id/btnEliminarDispo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/eliminar" />

    </LinearLayout>

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/volver" />

</LinearLayout>